Simplify dependency management