@@ -22,7 +22,6 @@
     <jooq.version>@jooq.version@</jooq.version>
     <liquibase.version>@liquibase.version@</liquibase.version>
     <markitect-liquibase.version>@project.version@</markitect-liquibase.version>
-    <snakeyaml.version>@snakeyaml.version@</snakeyaml.version>
   </properties>
 
   <dependencyManagement>
@@ -73,9 +72,6 @@
               <LIQUIBASE_SHOW_BANNER>false</LIQUIBASE_SHOW_BANNER>
               <LIQUIBASE_SQL_LOG_LEVEL>info</LIQUIBASE_SQL_LOG_LEVEL>
             </environmentVariables>
-            <argLine>@{argLine}
-              -javaagent:${settings.localRepository}${file.separator}net${file.separator}bytebuddy${file.separator}byte-buddy-agent${file.separator}${byte-buddy.version}${file.separator}byte-buddy-agent-${byte-buddy.version}.jar
-              -XX:-EnableDynamicAgentLoading</argLine>
             <useManifestOnlyJar>false</useManifestOnlyJar>
           </configuration>
         </plugin>
