@@ -96,23 +96,10 @@
       ${maven.multiModuleProjectDirectory}/target/spotless-npm-install-cache
     </spotless.npmInstallCache>
 
-    <apiguardian.version>1.1.2</apiguardian.version>
-    <assertj.version>3.27.6</assertj.version>
-    <awaitility.version>4.3.0</awaitility.version>
-    <bnd-annotation.version>7.1.0</bnd-annotation.version>
-    <byte-buddy.version>1.18.3</byte-buddy.version>
     <central-publishing-maven-plugin.version>0.9.0</central-publishing-maven-plugin.version>
     <checkstyle.version>12.3.0</checkstyle.version>
     <!-- renovate: depName=io.github.solven-eu.cleanthat:java -->
     <cleanthat.version>2.24</cleanthat.version>
-    <commons-codec.version>1.20.0</commons-codec.version>
-    <commons-collections4.version>4.5.0</commons-collections4.version>
-    <commons-compress.version>1.28.0</commons-compress.version>
-    <commons-io.version>2.21.0</commons-io.version>
-    <commons-lang3.version>3.20.0</commons-lang3.version>
-    <commons-text.version>1.15.0</commons-text.version>
-    <docker-java.version>3.7.0</docker-java.version>
-    <duct-tape.version>1.0.8</duct-tape.version>
     <error-prone.version>2.45.0</error-prone.version>
     <extra-enforcer-rules.version>1.11.0</extra-enforcer-rules.version>
     <findsecbugs-plugin.version>1.14.0</findsecbugs-plugin.version>
@@ -122,26 +109,12 @@
     <!-- renovate: depName=com.google.googlejavaformat:google-java-format -->
     <google-java-format.version>1.33.0</google-java-format.version>
     <guava.version>33.5.0-jre</guava.version>
-    <h2.version>2.4.240</h2.version>
-    <hamcrest.version>3.0</hamcrest.version>
-    <hikaricp.version>7.0.2</hikaricp.version>
-    <hsqldb.version>2.7.4</hsqldb.version>
-    <jackson.version>2.20.1</jackson.version>
+    <h2.version>2.3.232</h2.version>
     <jacoco.version>0.8.14</jacoco.version>
-    <jakarta-activation.version>2.1.4</jakarta-activation.version>
-    <jakarta-annotation.version>3.0.0</jakarta-annotation.version>
-    <jakarta-xml-bind.version>4.0.4</jakarta-xml-bind.version>
-    <jetbrains-annotations.version>26.0.2-1</jetbrains-annotations.version>
-    <jna.version>5.18.1</jna.version>
-    <jooq.version>3.20.10</jooq.version>
+    <jooq.version>3.19.29</jooq.version>
     <jspecify.version>1.0.0</jspecify.version>
-    <junit.version>4.13.2</junit.version>
-    <junit-jupiter.version>6.0.1</junit-jupiter.version>
     <junit-pioneer.version>2.3.0</junit-pioneer.version>
-    <liquibase.version>5.0.1</liquibase.version>
-    <log4j2.version>2.25.3</log4j2.version>
-    <logback.version>1.5.23</logback.version>
-    <lombok.version>1.18.42</lombok.version>
+    <liquibase.version>4.31.1</liquibase.version>
     <maven-antrun-plugin.version>3.2.0</maven-antrun-plugin.version>
     <maven-archetype.version>3.4.1</maven-archetype.version>
     <maven-assembly-plugin.version>3.8.0</maven-assembly-plugin.version>
@@ -165,30 +138,15 @@
     <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
     <maven-surefire.version>3.5.4</maven-surefire.version>
     <maven-wrapper.version>3.3.4</maven-wrapper.version>
-    <micrometer.version>1.16.1</micrometer.version>
-    <mockito.version>5.21.0</mockito.version>
-    <mssql-jdbc.version>13.2.1.jre11</mssql-jdbc.version>
     <!-- renovate: datasource=node-version depName=node -->
     <node.version>24.12.0</node.version>
     <nullaway.version>0.12.15</nullaway.version>
-    <objenesis.version>3.4</objenesis.version>
-    <opencsv.version>5.12.0</opencsv.version>
-    <opentest4j.version>1.3.0</opentest4j.version>
-    <osgi-annotation-bundle.version>2.0.0</osgi-annotation-bundle.version>
-    <osgi-annotation-versioning.version>1.1.2</osgi-annotation-versioning.version>
-    <osgi-resource.version>1.0.1</osgi-resource.version>
-    <osgi-service-serviceloader.version>1.0.0</osgi-service-serviceloader.version>
-    <postgresql.version>42.7.8</postgresql.version>
     <!-- renovate: datasource=npm depName=prettier -->
     <prettier.version>3.7.4</prettier.version>
     <!-- renovate: datasource=npm depName=prettier-plugin-properties -->
     <prettier-plugin-properties.version>0.3.0</prettier-plugin-properties.version>
     <!-- renovate: datasource=npm depName=prettier-plugin-toml -->
     <prettier-plugin-toml.version>2.0.6</prettier-plugin-toml.version>
-    <r2dbc-spi.version>1.0.0.RELEASE</r2dbc-spi.version>
-    <reactive-streams.version>1.0.4</reactive-streams.version>
-    <slf4j.version>2.0.17</slf4j.version>
-    <snakeyaml.version>2.5</snakeyaml.version>
     <sonar-maven-plugin.version>5.5.0.6356</sonar-maven-plugin.version>
     <!-- renovate: depName=com.github.ekryd.sortpom:sortpom-sorter -->
     <sortpom.version>4.0.0</sortpom.version>
@@ -196,7 +154,6 @@
     <spotbugs.version>4.9.8</spotbugs.version>
     <spotless-maven-plugin.version>3.1.0</spotless-maven-plugin.version>
     <spring-boot.version>3.5.9</spring-boot.version>
-    <spring-framework.version>6.2.15</spring-framework.version>
     <testcontainers.version>2.0.3</testcontainers.version>
     <versions-maven-plugin.version>2.20.1</versions-maven-plugin.version>
   </properties>
@@ -646,18 +603,6 @@
                   <banDynamicVersions>
                     <allowSnapshots>true</allowSnapshots>
                   </banDynamicVersions>
-                  <bannedDependencies>
-                    <excludes>
-                      <exclude>com.jayway.jsonpath:json-path</exclude>
-                      <exclude>javax.activation</exclude>
-                      <exclude>javax.xml.bind</exclude>
-                      <exclude>net.minidev:json-smart</exclude>
-                      <exclude>org.hamcrest:hamcrest-core</exclude>
-                      <exclude>org.skyscreamer:jsonassert</exclude>
-                      <exclude>org.xmlunit:xmlunit-core</exclude>
-                    </excludes>
-                  </bannedDependencies>
-                  <dependencyConvergence/>
                   <requireJavaVersion>
                     <version>${java.version}</version>
                   </requireJavaVersion>
@@ -666,92 +611,6 @@
                   </requireMavenVersion>
                   <requireNoRepositories/>
                   <requirePluginVersions/>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>ch.qos.logback</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>com.github.docker-java</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>dev.markitect.liquibase</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>io.micrometer</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>net.bytebuddy</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.apache.logging.log4j</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.jooq</dependency>
-                    </dependencies>
-                    <plugins>
-                      <plugin>org.jooq</plugin>
-                    </plugins>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.junit</dependency>
-                      <dependency>org.junit.jupiter</dependency>
-                      <dependency>org.junit.vintage</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.junit.platform</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.liquibase</dependency>
-                    </dependencies>
-                    <plugins>
-                      <plugin>org.liquibase</plugin>
-                    </plugins>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.mockito</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.slf4j</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.springframework</dependency>
-                    </dependencies>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.springframework.boot</dependency>
-                    </dependencies>
-                    <plugins>
-                      <plugin>org.springframework.boot</plugin>
-                    </plugins>
-                  </requireSameVersions>
-                  <requireSameVersions>
-                    <dependencies>
-                      <dependency>org.testcontainers</dependency>
-                    </dependencies>
-                  </requireSameVersions>
                   <banCircularDependencies/>
                   <banDuplicateClasses>
                     <findAllDuplicates>true</findAllDuplicates>
@@ -913,9 +772,6 @@
               <LIQUIBASE_SHOW_BANNER>false</LIQUIBASE_SHOW_BANNER>
               <LIQUIBASE_SQL_LOG_LEVEL>info</LIQUIBASE_SQL_LOG_LEVEL>
             </environmentVariables>
-            <argLine>@{argLine}
-              -javaagent:${settings.localRepository}${file.separator}org${file.separator}mockito${file.separator}mockito-core${file.separator}${mockito.version}${file.separator}mockito-core-${mockito.version}.jar
-              -XX:-EnableDynamicAgentLoading</argLine>
             <excludes>
               <exclude>**/*$*</exclude>
             </excludes>
@@ -1016,9 +872,9 @@
           <version>${jooq.version}</version>
         </plugin>
         <plugin>
-          <groupId>org.jooq</groupId>
-          <artifactId>jooq-meta-extensions-liquibase</artifactId>
-          <version>${jooq.version}</version>
+          <groupId>org.liquibase</groupId>
+          <artifactId>liquibase-maven-plugin</artifactId>
+          <version>${liquibase.version}</version>
         </plugin>
         <plugin>
           <groupId>org.sonarsource.scanner.maven</groupId>
